--- a/todo.txt
+++ b/todo.txt
@@ -10,4 +10,5 @@ MY TODO LIST
 8. Complete internship task.
 9. Practice chess openings.
 10. Solve chess puzzles.
+11. Become a grandmaster
 11. Check exam schedule.
